Skip collection of swagger libraries
swagger libraries are skipped so not to conflict with the
ones provided by drools-pdp and endpoints.

Issue-ID: POLICY-3454
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: If6643112ddda95d0a6f105a329fcbc3b7e26ad64

--- a/controlloop/common/feature-controlloop-management/pom.xml
+++ b/controlloop/common/feature-controlloop-management/pom.xml
@@ -85,7 +85,7 @@
                             <includeScope>runtime</includeScope>
                             <excludeScope>provided</excludeScope>
                             <excludeTransitive>false</excludeTransitive>
-                            <excludeGroupIds>org.glassfish.hk2.external,org.glassfish.hk2</excludeGroupIds>
+                            <excludeGroupIds>org.glassfish.hk2.external,org.glassfish.hk2,io.swagger</excludeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
