exclude jackson-annotations from apps classpath
Issue-ID: POLICY-3468
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I0c475dcfa33009eca3056dcb003f6658dacb3416
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>

--- a/controlloop/common/feature-controlloop-management/pom.xml
+++ b/controlloop/common/feature-controlloop-management/pom.xml
@@ -86,6 +86,7 @@
                             <excludeScope>provided</excludeScope>
                             <excludeTransitive>false</excludeTransitive>
                             <excludeGroupIds>org.glassfish.hk2.external,org.glassfish.hk2,io.swagger</excludeGroupIds>
+                            <excludeArtifactIds>jackson-annotations</excludeArtifactIds>
                         </configuration>
                     </execution>
                 </executions>
