Use new xacml actor in drools-apps
Modified drools-apps to use actor.xacml instead of actor.guard.
This included updating property files.

Issue-ID: POLICY-3503
Change-Id: I25c5586c59a2adaae9f4f0f5ca66e14b12b0c18a
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-usecases/pom.xml
+++ b/controlloop/common/controller-usecases/pom.xml
@@ -3,7 +3,7 @@
   ============LICENSE_START=======================================================
   ONAP
   ================================================================================
-  Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+  Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -136,7 +136,7 @@
         </dependency>
         <dependency>
             <groupId>org.onap.policy.models.policy-models-interactions.model-actors</groupId>
-            <artifactId>actor.guard</artifactId>
+            <artifactId>actor.xacml</artifactId>
             <version>${policy.models.version}</version>
             <scope>provided</scope>
         </dependency>
