--- a/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
+++ b/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
@@ -29,12 +29,12 @@ operation.history.password=
 # configured and started.  Thus some of them have a "placeholder" property.
 #
 
-#actor.service.GUARD.disabled=true
-actor.service.GUARD.clientName=GUARD
-actor.service.GUARD.onapName=my-onap-name
-actor.service.GUARD.onapComponent=my-onap-component
-actor.service.GUARD.onapInstance=my-onap-instance
-actor.service.GUARD.operations.Decision.path=decision
+#actor.service.XACML.disabled=true
+actor.service.XACML.clientName=XACML
+actor.service.XACML.onapName=my-onap-name
+actor.service.XACML.onapComponent=my-onap-component
+actor.service.XACML.onapInstance=my-onap-instance
+actor.service.XACML.operations.Guard.path=decision
 
 actor.service.AAI.clientName=AAI
 actor.service.AAI.operations.CustomQuery.path=aai/v21/query
