--- a/controlloop/common/controller-usecases/src/test/resources/config/usecases-http-client.properties
+++ b/controlloop/common/controller-usecases/src/test/resources/config/usecases-http-client.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START=======================================================
 # ONAP
 # ================================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,14 +18,14 @@
 # ============LICENSE_END=========================================================
 #
 
-http.client.services=GUARD,AAI,SDNC,SO,VFC
+http.client.services=XACML,AAI,SDNC,SO,VFC
 
-http.client.services.GUARD.managed=true
-http.client.services.GUARD.host=localhost
-http.client.services.GUARD.port=6669
-http.client.services.GUARD.userName=pdpx
-http.client.services.GUARD.password=pdpx
-http.client.services.GUARD.contextUriPath=policy/pdpx/v1/
+http.client.services.XACML.managed=true
+http.client.services.XACML.host=localhost
+http.client.services.XACML.port=6669
+http.client.services.XACML.userName=pdpx
+http.client.services.XACML.password=pdpx
+http.client.services.XACML.contextUriPath=policy/pdpx/v1/
 
 http.client.services.AAI.managed=true
 http.client.services.AAI.host=localhost
