--- a/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-http-client.properties
+++ b/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-http-client.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,7 +18,7 @@
 # ============LICENSE_END========================================================
 #
 
-http.client.services=guard-client
-http.client.services.guard-client.host=localhost
-http.client.services.guard-client.port=80
-http.client.services.guard-client.managed=true
+http.client.services=xacml-client
+http.client.services.xacml-client.host=localhost
+http.client.services.xacml-client.port=80
+http.client.services.xacml-client.managed=true
