--- a/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-invalid-db.properties
+++ b/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-invalid-db.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,12 +18,12 @@
 # ============LICENSE_END========================================================
 #
 
-#actor.service.GUARD.disabled=true
-actor.service.GUARD.clientName=guard-client
-actor.service.GUARD.onapName=my-onap-name
-actor.service.GUARD.onapComponent=my-onap-component
-actor.service.GUARD.onapInstance=my-onap-instance
-actor.service.GUARD.operations.Decision.path=decide
+#actor.service.XACML.disabled=true
+actor.service.XACML.clientName=xacml-client
+actor.service.XACML.onapName=my-onap-name
+actor.service.XACML.onapComponent=my-onap-component
+actor.service.XACML.onapInstance=my-onap-instance
+actor.service.XACML.operations.Guard.path=decide
 
 # purposely missing the URL
 #operation.history.url=jdbc:h2:mem:EventManagerServicesTest
