--- a/controlloop/common/eventmanager/pom.xml
+++ b/controlloop/common/eventmanager/pom.xml
@@ -68,7 +68,7 @@
         </dependency>
         <dependency>
             <groupId>org.onap.policy.models.policy-models-interactions.model-actors</groupId>
-            <artifactId>actor.guard</artifactId>
+            <artifactId>actor.xacml</artifactId>
             <version>${policy.models.version}</version>
             <scope>provided</scope>
         </dependency>
