--- a/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-no-guard-actor.properties
+++ b/controlloop/common/eventmanager/src/test/resources/eventService/event-svc-no-guard-actor.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,8 +18,8 @@
 # ============LICENSE_END========================================================
 #
 
-# all GUARD properties are commented out on purpose
+# all XACML properties are commented out on purpose
 
-#actor.service.GUARD.disabled=true
-#actor.service.GUARD.clientName=guard-client
-#actor.service.GUARD.operations.Decision.path=decide
+#actor.service.XACML.disabled=true
+#actor.service.XACML.clientName=xacml-client
+#actor.service.XACML.operations.Guard.path=decide
