Upgrade CDS version
Issue-ID: POLICY-3507
Signed-off-by: Krystian Kedron <k.kedron@partner.samsung.com>
Change-Id: Ice4d3d3e138f91f7b78e0b1e7555d9a7e59cf18e

--- a/controlloop/common/eventmanager/pom.xml
+++ b/controlloop/common/eventmanager/pom.xml
@@ -150,7 +150,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.onap.ccsdk.cds.blueprintsprocessor</groupId>
+            <groupId>org.onap.ccsdk.cds.blueprintsprocessor.modules</groupId>
             <artifactId>blueprint-proto</artifactId>
         </dependency>
         <dependency>
