--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.3.1</version>
+        <version>3.3.2-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -45,8 +45,8 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.8.1</version.policy.common>
-        <policy.models.version>2.4.3</policy.models.version>
+        <version.policy.common>1.8.2-SNAPSHOT</version.policy.common>
+        <policy.models.version>2.4.4-SNAPSHOT</policy.models.version>
         <version.policy.drools-pdp>1.8.3</version.policy.drools-pdp>
     </properties>
 
