Fix drools-apps CSIT actor.xacml properties
I know I checked for the guard property names when doing the change from
actor.guard to actor.xacml, but it appears that some were overlooked
anyway.  Made the appropriate updates.

Issue-ID: POLICY-3503
Change-Id: Ia703628154beec38d464500fb779f9eadea8652c
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/XACML-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/XACML-http-client.properties
@@ -1,7 +1,7 @@
 # ============LICENSE_START=======================================================
 # ONAP
 # ================================================================================
-# Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -16,12 +16,12 @@
 # limitations under the License.
 # ============LICENSE_END=========================================================
 
-http.client.services=GUARD
+http.client.services=XACML
 
-http.client.services.GUARD.managed=true
-http.client.services.GUARD.https=true
-http.client.services.GUARD.host=${envd:PDP_HOST}
-http.client.services.GUARD.port=${envd:PDP_PORT}
-http.client.services.GUARD.userName=${envd:PDP_USERNAME}
-http.client.services.GUARD.password=${envd:PDP_PASSWORD}
-http.client.services.GUARD.contextUriPath=${envd:PDP_CONTEXT_URI:policy/pdpx/v1/}
+http.client.services.XACML.managed=true
+http.client.services.XACML.https=true
+http.client.services.XACML.host=${envd:PDP_HOST}
+http.client.services.XACML.port=${envd:PDP_PORT}
+http.client.services.XACML.userName=${envd:PDP_USERNAME}
+http.client.services.XACML.password=${envd:PDP_PASSWORD}
+http.client.services.XACML.contextUriPath=${envd:PDP_CONTEXT_URI:policy/pdpx/v1/}
