--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -30,12 +30,12 @@ operation.history.password=${env:SQL_PASSWORD}
 # configured and started.  Thus some of them have a "placeholder" property.
 #
 
-actor.service.GUARD.disabled=${envd:GUARD_DISABLED:false}
-actor.service.GUARD.clientName=GUARD
-actor.service.GUARD.onapName=Policy
-actor.service.GUARD.onapComponent=Drools PDP
-actor.service.GUARD.onapInstance=Usecases
-actor.service.GUARD.operations.Decision.path=decision
+actor.service.XACML.disabled=${envd:GUARD_DISABLED:false}
+actor.service.XACML.clientName=XACML
+actor.service.XACML.onapName=Policy
+actor.service.XACML.onapComponent=Drools PDP
+actor.service.XACML.onapInstance=Usecases
+actor.service.XACML.operations.Decision.path=decision
 
 actor.service.AAI.clientName=AAI
 actor.service.AAI.operations.CustomQuery.path=aai/v21/query
