Still fixing drools-apps CSIT
No easy way to test this without merging it, as the docker build always
pulls drools-apps from the remote maven.  :-(

Issue-ID: POLICY-3503
Change-Id: I5d5bcfc3bb28d6ef3d4050f4e7d013acbc31f583
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
+++ b/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
@@ -35,6 +35,7 @@ actor.service.XACML.onapName=my-onap-name
 actor.service.XACML.onapComponent=my-onap-component
 actor.service.XACML.onapInstance=my-onap-instance
 actor.service.XACML.operations.Guard.path=decision
+actor.service.XACML.operations.Guard.action=guard
 
 actor.service.AAI.clientName=AAI
 actor.service.AAI.operations.CustomQuery.path=aai/v21/query
