--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -35,7 +35,8 @@ actor.service.XACML.clientName=XACML
 actor.service.XACML.onapName=Policy
 actor.service.XACML.onapComponent=Drools PDP
 actor.service.XACML.onapInstance=Usecases
-actor.service.XACML.operations.Decision.path=decision
+actor.service.XACML.operations.Guard.path=decision
+actor.service.XACML.operations.Guard.action=guard
 
 actor.service.AAI.clientName=AAI
 actor.service.AAI.operations.CustomQuery.path=aai/v21/query
