Still fixing drools-apps CSIT
No easy way to test this without merging it, as the docker build always
pulls drools-apps from the remote maven.  :-(

Issue-ID: POLICY-3503
Change-Id: I5d5bcfc3bb28d6ef3d4050f4e7d013acbc31f583
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -36,6 +36,7 @@ actor.service.XACML.onapName=Policy
 actor.service.XACML.onapComponent=Drools PDP
 actor.service.XACML.onapInstance=Usecases
 actor.service.XACML.operations.Decision.path=decision
+actor.service.XACML.operations.Decision.action=guard
 
 actor.service.AAI.clientName=AAI
 actor.service.AAI.operations.CustomQuery.path=aai/v21/query
