Add SQL_PORT configuration
Issue-ID: POLICY-3533
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I43f6313550cf1047310486a7f40586febf1847f7

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -19,9 +19,9 @@
 #
 
 # DB parameters
-operation.history.url=jdbc:mariadb://${env:SQL_HOST}:3306/operationshistory
-operation.history.userName=${env:SQL_USER}
-operation.history.password=${env:SQL_PASSWORD}
+operation.history.url=jdbc:mariadb://${envd:SQL_HOST}:${envd:SQL_PORT:3306}/operationshistory
+operation.history.userName=${envd:SQL_USER}
+operation.history.password=${envd:SQL_PASSWORD}
 
 #
 # Actor parameters
