--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <groupId>org.onap.policy.drools-applications</groupId>
     <artifactId>drools-applications</artifactId>
-    <version>1.9.0-SNAPSHOT</version>
+    <version>1.9.0</version>
 
     <name>policy-drools-applications</name>
     <packaging>pom</packaging>
@@ -45,8 +45,8 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.9.0-SNAPSHOT</version.policy.common>
-        <policy.models.version>2.5.0-SNAPSHOT</policy.models.version>
+        <version.policy.common>1.9.0</version.policy.common>
+        <policy.models.version>2.5.0</policy.models.version>
         <version.policy.drools-pdp>1.9.0-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
