--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2022 CTC Intellectual Property. All rights reserved.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -77,6 +77,7 @@ actor.service.SO.pollWaitSec=20
 actor.service.SO.operations.VF\ Module\ Create.path=serviceInstantiation/v7/serviceInstances
 actor.service.SO.operations.VF\ Module\ Delete.path=serviceInstances/v7
 actor.service.SO.operations.Modify\ NSSI.path=3gppservices/v7/modify
+actor.service.SO.operations.ModifyCloudLeasedLine.path=infra/serviceIntent/v1/modify
 
 actor.service.VFC.clientName=VFC
 actor.service.VFC.pollPath=jobs
