update references in policy/drools-applications pom
updated references in the policy/drools-applications pom

*** This commit is generated by a PF release script ***

Issue-ID: POLICY-3958
Signed-off-by: liamfallon <liam.fallon@est.tech>
Change-Id: I202ec93d7b3ae9321d1ba0f97f38c830a8798dd2

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.4.4-SNAPSHOT</version>
+        <version>3.4.4</version>
         <relativePath />
     </parent>
 
@@ -45,9 +45,9 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.9.2-SNAPSHOT</version.policy.common>
-        <policy.models.version>2.5.2-SNAPSHOT</policy.models.version>
-        <version.policy.drools-pdp>1.9.2-SNAPSHOT</version.policy.drools-pdp>
+        <version.policy.common>1.9.2</version.policy.common>
+        <policy.models.version>2.5.2</policy.models.version>
+        <version.policy.drools-pdp>1.9.2</version.policy.drools-pdp>
     </properties>
 
     <build>
