Allow flexible specification of JDBC driver
Issue-ID: POLICY-4177
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: Id196bf4930f014fbc813f39d2fc48c05f11ecce0

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -20,7 +20,7 @@
 #
 
 # DB parameters
-operation.history.url=jdbc:mariadb://${envd:SQL_HOST}:${envd:SQL_PORT:3306}/operationshistory
+operation.history.url=${envd:JDBC_URL}operationshistory${envd:JDBC_OPTS}
 operation.history.userName=${envd:SQL_USER}
 operation.history.password=${envd:SQL_PASSWORD}
 
