--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.3.3-SNAPSHOT</version>
+        <version>3.3.3</version>
         <relativePath />
     </parent>
 
@@ -45,9 +45,9 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.8.3-SNAPSHOT</version.policy.common>
-        <policy.models.version>2.4.6-SNAPSHOT</policy.models.version>
-        <version.policy.drools-pdp>1.8.5-SNAPSHOT</version.policy.drools-pdp>
+        <version.policy.common>1.8.3</version.policy.common>
+        <policy.models.version>2.4.6</policy.models.version>
+        <version.policy.drools-pdp>1.8.5</version.policy.drools-pdp>
     </properties>
 
     <build>
