--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   ============LICENSE_START=======================================================
   drools-pdp-apps
   ================================================================================
-  Copyright (C) 2017-2021 AT&T Intellectual Property. All rights reserved.
+  Copyright (C) 2017-2022 AT&T Intellectual Property. All rights reserved.
   Modifications Copyright (C) 2019 Nordix Foundation.
   ================================================================================
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.3.3</version>
+        <version>3.3.4-SNAPSHOT</version>
         <relativePath />
     </parent>
 
@@ -45,9 +45,9 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.8.3</version.policy.common>
-        <policy.models.version>2.4.6</policy.models.version>
-        <version.policy.drools-pdp>1.8.5</version.policy.drools-pdp>
+        <version.policy.common>1.8.4-SNAPSHOT</version.policy.common>
+        <policy.models.version>2.4.7-SNAPSHOT</policy.models.version>
+        <version.policy.drools-pdp>1.8.6-SNAPSHOT</version.policy.drools-pdp>
     </properties>
 
     <build>
