Make HTTPS configurable on drools features
This commit makes HTTPS configurable on drools-applications features.
Prior to this, https was mandatory on some features.

This change is required to allow the CSITs to use http,a nd will be
required for service mesh as well.

Issue-ID: POLICY-4338
Change-Id: I4cff6f96c4f906f91709fae73da09fa47f6b37c8
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/AAI-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/AAI-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=AAI
 
 http.client.services.AAI.managed=true
-http.client.services.AAI.https=true
+http.client.services.AAI.https=${envd:AAI_HTTPS:true}
 http.client.services.AAI.host=${envd:AAI_HOST}
 http.client.services.AAI.port=${envd:AAI_PORT}
 http.client.services.AAI.userName=${envd:AAI_USERNAME}
