--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/SDNC-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/SDNC-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=SDNC
 
 http.client.services.SDNC.managed=true
-http.client.services.SDNC.https=true
+http.client.services.SDNC.https=${envd:SDNC_HTTPS:true}
 http.client.services.SDNC.host=${envd:SDNC_HOST}
 http.client.services.SDNC.port=${envd:SDNC_PORT}
 http.client.services.SDNC.userName=${envd:SDNC_USERNAME}
