--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/SO-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/SO-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=SO
 
 http.client.services.SO.managed=true
-http.client.services.SO.https=false
+http.client.services.SO.https=${envd:SO_HTTPS:false}
 http.client.services.SO.host=${envd:SO_HOST}
 http.client.services.SO.port=${envd:SO_PORT}
 http.client.services.SO.userName=${envd:SO_USERNAME}
