--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/VFC-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/VFC-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=VFC
 
 http.client.services.VFC.managed=true
-http.client.services.VFC.https=true
+http.client.services.VFC.https=${envd:VFC_HTTPS:true}
 http.client.services.VFC.host=${envd:VFC_HOST}
 http.client.services.VFC.port=${envd:VFC_PORT}
 http.client.services.VFC.userName=${envd:VFC_USERNAME}
