--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/XACML-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/XACML-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=XACML
 
 http.client.services.XACML.managed=true
-http.client.services.XACML.https=true
+http.client.services.XACML.https=${envd:PDP_HTTPS:true}
 http.client.services.XACML.host=${envd:PDP_HOST}
 http.client.services.XACML.port=${envd:PDP_PORT}
 http.client.services.XACML.userName=${envd:PDP_USERNAME}
