--- a/INFO.yaml
+++ b/INFO.yaml
@@ -74,12 +74,15 @@ tsc:
           link: https://lists.onap.org/g/onap-tsc/message/6754
         - type: 'Addition'
           name: 'Liam Fallon'
-          # new PTL
           link: https://lists.onap.org/g/onap-tsc/message/8032
+          # Retired
         - type: 'Removal'
           name: 'Jim Hahn'
-          # Retired
           link: https://lists.onap.org/g/onap-tsc/message/8056
         - type: 'Addition'
           name: 'Ramesh Murugan Iyer'
           link: https://lists.onap.org/g/onap-tsc/message/8689
+          # Stepped Down
+        - type: 'Removal'
+          name: 'Ajith Sreekumar'
+          link: https://lists.onap.org/g/onap-tsc/message/8878
