Fix typo in DCAE CL config file
Issue-ID: POLICY-4338
Change-Id: I8b12c197504308725daac7a19e855e01b53037fc
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/DCAE_CL_RSP-topic.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/DCAE_CL_RSP-topic.properties
@@ -19,5 +19,5 @@
 
 dmaap.sink.topics=DCAE_CL_RSP
 
-dmaap.sink.topics.DCAE_CL_RSP.servers=${env:DMAAP_SERVERS}
+dmaap.sink.topics.DCAE_CL_RSP.servers=${envd:DMAAP_SERVERS}
 dmaap.sink.topics.DCAE_CL_RSP.https=${envd:DMAAP_HTTPS:true}
