Make HTTPS configurable on drools features
This commit makes HTTPS configurable on drools-applications features.
Prior to this, https was mandatory on some features.

This change is required to allow the CSITs to use http,a nd will be
required for service mesh as well.

Issue-ID: POLICY-4338
Change-Id: I73ea46b016288ecae4ea4eb1b2349a64c3e56f63
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/GUARD-http-client.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/GUARD-http-client.properties
@@ -2,6 +2,7 @@
 # ONAP
 # ================================================================================
 # Copyright (C) 2020 AT&T Intellectual Property. All rights reserved.
+# Modifications Copyright (C) 2022 Nordix Foundation.
 # ================================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -19,7 +20,7 @@
 http.client.services=GUARD
 
 http.client.services.GUARD.managed=true
-http.client.services.GUARD.https=true
+http.client.services.GUARD.https=${envd:PDP_HTTPS:true}
 http.client.services.GUARD.host=${envd:PDP_HOST}
 http.client.services.GUARD.port=${envd:PDP_PORT}
 http.client.services.GUARD.userName=${envd:PDP_USERNAME}
