Fix minor warnings in code
Issue-ID: POLICY-4045
Change-Id: I3587a3b77ff5860a84a88d4d390238e3654693b7
Signed-off-by: liamfallon <liam.fallon@est.tech>

--- a/controlloop/common/controller-usecases/pom.xml
+++ b/controlloop/common/controller-usecases/pom.xml
@@ -216,6 +216,12 @@
                                                 <artifactId>kie-maven-plugin</artifactId>
                                                 <goals>
                                                     <goal>build</goal>
+                                                    <goal>generateANC</goal>
+                                                    <goal>generateDMNModel</goal>
+                                                    <goal>generateModel</goal>
+                                                    <goal>generatePMMLModel</goal>
+                                                    <goal>injectreactive</goal>
+                                                    <goal>validateDMN</goal>
                                                 </goals>
                                             </pluginExecutionFilter>
                                             <action>
