update references in policy/drools-applications pom
updated references in the policy/drools-applications pom

*** This commit is generated by a PF release script ***

Issue-ID: POLICY-4408
Signed-off-by: liamfallon <liam.fallon@est.tech>
Change-Id: Ie3a23777e6950323db6897f2dee25e1e10c9c553

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>3.6.1-SNAPSHOT</version>
+        <version>3.6.1</version>
         <relativePath />
     </parent>
 
@@ -45,9 +45,9 @@
         <staging.path>content/repositories/staging/</staging.path>
 
         <!-- Project common dependency versions -->
-        <version.policy.common>1.11.1-SNAPSHOT</version.policy.common>
-        <policy.models.version>2.7.1-SNAPSHOT</policy.models.version>
-        <version.policy.drools-pdp>1.11.1-SNAPSHOT</version.policy.drools-pdp>
+        <version.policy.common>1.11.1</version.policy.common>
+        <policy.models.version>2.7.1</policy.models.version>
+        <version.policy.drools-pdp>1.11.1</version.policy.drools-pdp>
     </properties>
 
     <build>
