--- a/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
+++ b/controlloop/common/feature-controlloop-management/src/main/feature/config/event-manager.properties
@@ -2,7 +2,7 @@
 # ============LICENSE_START======================================================
 # ONAP
 # ===============================================================================
-# Copyright (C) 2020-2021 AT&T Intellectual Property. All rights reserved.
+# Copyright (C) 2020-2022 AT&T Intellectual Property. All rights reserved.
 # Modifications Copyright (C) 2022 CTC, Inc. and others.
 # ===============================================================================
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -70,6 +70,10 @@ actor.service.SDNC.operations.Reroute.path=\
 actor.service.SDNR.sinkTopic=SDNR-CL
 actor.service.SDNR.sourceTopic=SDNR-CL-RSP
 actor.service.SDNR.operations.any.placeholder=
+
+actor.service.A1P.sinkTopic=A1-P
+actor.service.A1P.sourceTopic=A1-P-RSP
+actor.service.A1P.operations.any.placeholder=
 
 actor.service.SO.clientName=SO
 actor.service.SO.pollPath=orchestrationRequests/v5/
