Support A1 PMS Actor for SON use case
Issue-ID: POLICY-4444
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: I1811b79513616aab813b6d97823d6c1d2bbbee47

--- a/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
+++ b/controlloop/common/controller-usecases/src/test/resources/config/event-manager.properties
@@ -69,6 +69,10 @@ actor.service.SDNR.sinkTopic=SDNR-CL
 actor.service.SDNR.sourceTopic=SDNR-CL-RSP
 actor.service.SDNR.operations.any.placeholder=
 
+actor.service.A1P.sinkTopic=A1-P
+actor.service.A1P.sourceTopic=A1-P-RSP
+actor.service.A1P.operations.any.placeholder=
+
 actor.service.SO.clientName=SO
 actor.service.SO.pollPath=orchestrationRequests/v5/
 actor.service.SO.maxPolls=20
